--- a/data/friends-manager.ui
+++ b/data/friends-manager.ui
@@ -45,7 +45,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="model">friends_manager_store</property>
-                        <property name="enable_search">False</property>
+                        <property name="search_column">1</property>
                         <child>
                           <object class="GtkTreeViewColumn" id="treeviewcolumn1">
                             <property name="title">User</property>
